--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,34 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* debug */
+.menu {
+    height: 80px;
+    background-color: #2c3e50;
+}
+
+.start {
+    height: 200px;
+    background-color: #1abc9c;
+}
+
+
+
+.about {
+    background-color: #1abc9c;
+}
+
+.contact {
+    height: 200px;
+}
+
+.boxheight {
+    height: 80px;
+    background-color: yellow;
+
+}
+
+.titolopiccolo {
+    height: 50px;
+}
