--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,10 @@
     background-color: #1abc9c;
 }
 
-
+.portfolio {
+    width: 80%;
+    margin: 0 auto;
+}
 
 .about {
     background-color: #1abc9c;
@@ -28,9 +31,20 @@
 .boxheight {
     height: 80px;
     background-color: yellow;
+    width: 100px;
+    margin: auto;
 
 }
 
 .titolopiccolo {
     height: 50px;
+}
+
+.topfoot {
+    background-color: #3a546d;
+}
+
+.botfoot {
+    background-color: #2c3e50;
+    height: 80px;
 }
