--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,17 @@
     box-sizing: border-box;
 }
 
-/* debug */
+/* header */
 .menu {
-    height: 80px;
+    height: 90px;
     background-color: #2c3e50;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
 }
 
-.start {
+/* jumbo */
+#jumbotron {
     height: 200px;
     background-color: #1abc9c;
 }
