--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,27 @@
     box-sizing: border-box;
 }
 
+/* common */
+.stacco {
+   width: 40%; 
+   text-align: center; 
+   border-bottom: 2px solid; 
+   line-height: 0.1em;
+   margin: 20px auto 20px; 
+   padding: 0 50px;
+    
+}
+
+.stellav {
+    padding:0 10px;
+    background-color:#1abc9c ; 
+}
+
+.stellab {
+    padding:0 10px;
+    background-color:white ; 
+}
+
 /* header */
 .menu {
     height: 90px;
@@ -25,27 +46,17 @@
     width: 20%;
 }
 
-#stacco {
-   width: 40%; 
-   text-align: center; 
-   border-bottom: 2px solid white; 
-   line-height: 0.1em;
-   margin: 10px auto 20px; 
-   padding: 0 50px;
-    
-}
 
-#stacco span {
-    padding:0 10px;
-    background-color:#1abc9c ; 
+/* portfolio */
+#portfolio {
+    padding: 50px 0;
 }
 
 
-
-.portfolio {
-    width: 80%;
-    margin: 0 auto;
+#portfolio img {
+    width: 100%;
 }
+
 
 .about {
     background-color: #1abc9c;
