--- a/css/style.css
+++ b/css/style.css
@@ -84,14 +84,28 @@
     margin-top: 10px;
 }
 
-
-
-
+/* Footer  */
 .topfoot {
     background-color: #3a546d;
+    color: white;
+}
+
+.icona {
+    display: inline-block;
+    margin: 2px 5px;
+    border: 1px solid white;
+    border-radius: 50%;
+    width: 30px;
+
+}
+
+#green {
+    color: #1abc9c;
 }
 
 .botfoot {
     background-color: #2c3e50;
     height: 80px;
+    color: white;
+    font-size: 14px;
 }
